@@ -10,6 +10,8 @@ v0.9.2 (WIP):
     BUGFIX: Examples: Simplify and fix drawing of node header line (#180)
     
     BUGFIX: Editor: Cleanup tabs.
+    
+    BUGFIX: Editor: Use ImGuiKey directly with ImGui r18822 (#183)
 
 
 v0.9.1 (2022-08-27):
